# dotai

./: .gitignore  CHANGELOG.md  LICENSE  PRODUCT.md  README.md  pyproject.toml  rdc.yaml
.github/workflows/: publish.yml
src/dotai/: __init__.py  __main__.py  agents.py  context.py  converter.py  import_agent.py  indexer.py  insights.py  maintenance.py  models.py  preferences.py  roles.py  rules.py  skills.py  store.py  sync.py  utils.py  vet.py
src/dotai/cli/: __init__.py  __main__.py  agents_cmd.py  insights_cmd.py  prefs_cmd.py  roles_cmd.py  rules_cmd.py  skills_cmd.py  sync_cmd.py  watch_cmd.py
src/dotai/seed/roles/: architect.md  debugger.md  founder.md  mentor.md  product-manager.md  qa.md  reviewer.md  security.md  ship.md  writer.md
src/dotai/seed/skills/: careful.md  commit-helper.md  compress.md  context-dump.md  investigate.md  learn.md  parallel-work.md  plan.md  review.md  scaffold.md  ship.md  techdebt.md  verify.md
src/dotai/tools/: __init__.py  base.py  registry.py
tests/: conftest.py  test_agents.py  test_context.py  test_converter.py  test_import_agent.py  test_insights.py  test_maintenance.py  test_models.py  test_preferences.py  test_roles.py  test_rules.py  test_skills.py  test_store.py  test_sync.py  test_utils.py  test_vet.py
