[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotai"
version = "0.1.1"
description = "Universal AI context for any coding agent. Roles, skills, and rules in ~/.ai/"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dawa" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "watchdog>=4.0",
]

[project.scripts]
dotai = "dotai.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dotai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
