[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotai-cli"
version = "0.2.0"
description = "Universal AI context for any coding agent. Roles, skills, and rules in ~/.ai/"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dawa" }]
keywords = ["ai", "cli", "claude", "cursor", "gemini", "coding-agent", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "watchdog>=4.0",
    "ai-skill-audit>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/dawalama/dotai"
Repository = "https://github.com/dawalama/dotai"
Issues = "https://github.com/dawalama/dotai/issues"

[project.scripts]
dotai = "dotai.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dotai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
